# ingecon-findeter

./: .gitignore  CLAUDE.md  PROGRESS.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  contratos.py  dashboard.py  fotos.py  informes.py  plan_accion.py  usuarios.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  contrato.py  foto.py  informe.py  usuario.py
backend/app/schemas/: actividad_no_prevista.py  contrato.py  foto.py  informe.py  plan_accion.py  usuario.py
backend/app/scripts/: seed.py
backend/app/services/: excel_export.py  informe_generator.py  pdf_export.py
backend/tests/: conftest.py  test_auth.py  test_contratos.py  test_dashboard.py  test_informes.py  test_usuarios.py
docs/: 7 - GESFO082ListadechequeoplandemanejoambientalV2 (1) (1).xlsx  FR-INT-13-10 Informe diario inspeccion (1).xlsx  LISTA DE CHEQUEO CTO 703 DICIEMBRE (1).xlsx  app-base.md
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/contratos/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/informes/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/usuarios/: page.tsx
frontend/src/components/: AppShell.tsx  CurvaSChart.tsx  EstadoBadge.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth.tsx  types.ts
(+2 files in other folders)
